--- a/.github/workflows/build-mvn.yml
+++ b/.github/workflows/build-mvn.yml
@@ -72,8 +72,8 @@ jobs:
         run: >
           if test -f "${{ env.MOD_DESCRIPTOR }}"; then
             echo "ModuleDescriptor.json found!!!"
-            mv ${{ env.MOD_DESCRIPTOR }} MOD_DESCRIPTOR.orig
-            cat MOD_DESCRIPTOR.orig
+            mv ${{ env.MOD_DESCRIPTOR }} ./module-descriptor.json
+            cat module-descriptor.json
           else
             echo "ModuleDescriptor.json not found.."
           fi
@@ -83,7 +83,7 @@ jobs:
         id: moduleDescriptor
         uses: juliangruber/read-file-action@v1
         with:
-          path: ${{ env.MOD_DESCRIPTOR }}
+          path: ./module-descriptor.json
 
       - name: Docker build and health check
         if : ${{ env.HEALTH_CHECK  == 'true' }}
@@ -100,6 +100,9 @@ jobs:
           docker tag ${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }} $dockerRepo/${{ env.MODULE_NAME }}:latest
           docker push ${{ env.DOCKER_REPOSITORY }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}
           docker push ${{ env.DOCKER_REPOSITORY }}/${{ env.MODULE_NAME }}:latest
+
+      #- name: Maven deploy Stage
+       # if: 
 
       - name: Publish Module Descriptor
         if : ${{ env.PUBLISH_MOD_DESCRIPTOR  == 'true' &&  github.ref == 'refs/heads/master' || github.ref  == 'refs/heads/main'}}
