--- a/.github/workflows/build-mvn-release.yml
+++ b/.github/workflows/build-mvn-release.yml
@@ -4,12 +4,16 @@
 # Common FOLIO configurable environment variables to set:
 # - PUBLISH_MOD_DESCRIPTOR (boolean 'true' or 'false')
 
-
-name: build-mvn snapshot
-on: [push, pull_request]
+name: build-mvn-release
+on:
+  push:
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+*'
 
 jobs:
+  
   github-actions-ci:
+    if : ${{ startsWith(github.ref, 'refs/tags/v') }}
     env:
       JAVA_VERSION: 11
       DOCKER_REPOSITORY: "folioci"
