--- a/.github/workflows/build-mvn-release.yml
+++ b/.github/workflows/build-mvn-release.yml
@@ -4,16 +4,15 @@
 # Common FOLIO configurable environment variables to set:
 # - PUBLISH_MOD_DESCRIPTOR (boolean 'true' or 'false')
 
-name: build-mvn-release
+name: build-mvn release
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+*'
+      - "v[0-9]+.[0-9]+.[0-9]+*"
 
 jobs:
-  
   github-actions-ci:
-    if : ${{ startsWith(github.ref, 'refs/tags/v') }}
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     env:
       JAVA_VERSION: 11
       DOCKER_REPOSITORY: "folioci"
@@ -21,21 +20,21 @@ jobs:
       FOLIO_MD_REGISTRY: "https://folio-registry.dev.folio.org"
       MOD_DESCRIPTOR: "target/ModuleDescriptor.json"
       PUBLISH_MOD_DESCRIPTOR: "true"
-      SQ_XML_REPORT: 'target/site/jacoco/jacoco.xml'
-      SONAR_MVN_PLUGIN_VER: '3.9.1.2184'
-      SQ_HOST: 'https://sonarcloud.io'
-
+      SQ_XML_REPORT: "target/site/jacoco/jacoco.xml"
+      SONAR_MVN_PLUGIN_VER: "3.9.1.2184"
+      SQ_HOST: "https://sonarcloud.io"
 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           ref: ${{ github.REF }}
 
       - name: Use Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: ${{ env.JAVA_VERSION }}
+          cache: 'maven'
 
       - name: Set module name and version
         run: |
@@ -51,12 +50,12 @@ jobs:
           mvn dependency:list | { grep -i snapshot || true; }
           mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install org.jacoco:jacoco-maven-plugin:report
 
-      - name: Set Default branch as env variable 
+      - name: Set Default branch as env variable
         run: echo "DEFAULT_BRANCH=${{ github.event.repository.default_branch }}" >> $GITHUB_ENV
 
       - name: Fetch branches for SonarCloud Scan
         run: git fetch --no-tags ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY} +refs/heads/${{ env.DEFAULT_BRANCH }}:refs/remotes/origin/${{ env.DEFAULT_BRANCH }}
-      
+
       - name: Run SonarCloud scan
         run: >
           mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:${{ env.SONAR_MVN_PLUGIN_VER }}:sonar
@@ -69,16 +68,15 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-
       - name: Check for Module Descriptor
         if: ${{ env.PUBLISH_MOD_DESCRIPTOR  == 'true' }}
         run: >
           if test -f "${{ env.MOD_DESCRIPTOR }}"; then
-            echo "ModuleDescriptor.json found!!!"
+            echo "ModuleDescriptor.json found"
             mv ${{ env.MOD_DESCRIPTOR }} ./module-descriptor.json
             cat module-descriptor.json
           else
-            echo "ModuleDescriptor.json not found.."
+            echo "ModuleDescriptor.json not found !!!"
           fi
 
       - name: Docker build stage
@@ -99,20 +97,20 @@ jobs:
         run: mvn -DskipTests clean deploy
 
       - name: Read Module Descriptor
-        if : ${{ env.PUBLISH_MOD_DESCRIPTOR == 'true' }}
+        if: ${{ env.PUBLISH_MOD_DESCRIPTOR == 'true' }}
         id: moduleDescriptor
         uses: juliangruber/read-file-action@v1
         with:
           path: ./module-descriptor.json
 
       - name: Publish Module Descriptor
-        if : ${{ env.PUBLISH_MOD_DESCRIPTOR  == 'true' &&  github.ref == 'refs/heads/master' || github.ref  == 'refs/heads/main'}}
+        if: ${{ env.PUBLISH_MOD_DESCRIPTOR  == 'true' &&  github.ref == 'refs/heads/master' || github.ref  == 'refs/heads/main'}}
         id: moduleDescriptorPost
         uses: fjogeleit/http-request-action@master
         with:
           url: ${{ env.FOLIO_MD_REGISTRY }}/_/proxy/modules
-          method: 'POST'
-          contentType: 'application/json; charset=utf-8'
+          method: "POST"
+          contentType: "application/json; charset=utf-8"
           customHeaders: '{ "Accept": "application/json; charset=utf-8" }'
           data: ${{ steps.moduleDescriptor.outputs.content }}
           username: ${{ secrets.FOLIO_REGISTRY_USERNAME }}
