--- a/.github/workflows/build-mvn-release.yml
+++ b/.github/workflows/build-mvn-release.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Use Java
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
           cache: 'maven'
 
