--- a/.github/workflows/build-mvn.yml
+++ b/.github/workflows/build-mvn.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Use Java
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
           cache: 'maven'
 
