--- a/.github/workflows/build-mvn.yml
+++ b/.github/workflows/build-mvn.yml
@@ -76,13 +76,19 @@ jobs:
             echo "ModuleDescriptor.json not found !!!"
           fi
 
+      - name: Set docker image name
+        id: image
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.DOCKER_REPOSITORY }}/${{ env.MODULE_NAME }}
+
       - name: Docker build and publish stage
         #if : ${{ github.ref == 'refs/heads/master' || github.ref  == 'refs/heads/main' }}
         uses: docker/build-push-action@v3
         with:
           context: .
           push: false
-          tags: ${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}, ${{ env.MODULE_NAME }}:latest
+          tags: ${{ steps.meta.outputs.tags }}:${{ env.MODULE_VERSION }}, ${{ steps.meta.outputs.tags }}:latest
 
       # - name: Docker build stage
       #   run: docker build --pull=true --no-cache=true -t ${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }} .
