--- a/.github/workflows/build-mvn.yml
+++ b/.github/workflows/build-mvn.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Use Java
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: "temurin"
           java-version: ${{ env.JAVA_VERSION }}
-          cache: 'maven'
+          cache: "maven"
 
       - name: Set module name and version
         run: |
@@ -88,7 +88,9 @@ jobs:
         with:
           context: .
           push: false
-          tags: ${{ steps.meta.outputs.tags }}:${{ env.MODULE_VERSION }}, ${{ steps.meta.outputs.tags }}:latest
+          tags: |
+            ${{ env.DOCKER_REPOSITORY }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }},
+            ${{ env.DOCKER_REPOSITORY }}/${{ env.MODULE_NAME }}:latest
 
       # - name: Docker build stage
       #   run: docker build --pull=true --no-cache=true -t ${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }} .
