--- a/.github/workflows/build-mvn.yml
+++ b/.github/workflows/build-mvn.yml
@@ -83,27 +83,14 @@ jobs:
           images: ${{ env.DOCKER_REPOSITORY }}/${{ env.MODULE_NAME }}
 
       - name: Docker build and publish stage
-        #if : ${{ github.ref == 'refs/heads/master' || github.ref  == 'refs/heads/main' }}
+        if : ${{ github.ref == 'refs/heads/master' || github.ref  == 'refs/heads/main' }}
         uses: docker/build-push-action@v3
         with:
           context: .
-          push: false
+          push: true
           tags: |
             ${{ env.DOCKER_REPOSITORY }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }},
             ${{ env.DOCKER_REPOSITORY }}/${{ env.MODULE_NAME }}:latest
-
-      # - name: Docker build stage
-      #   run: docker build --pull=true --no-cache=true -t ${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }} .
-
-      # - name: Docker publish
-      #   if: ${{ github.ref == 'refs/heads/master' || github.ref  == 'refs/heads/main' }}
-      #   run: |
-      #     docker build --pull=true --no-cache=true -t ${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }} .
-      #     docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
-      #     docker tag ${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }} $dockerRepo/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}
-      #     docker tag ${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }} $dockerRepo/${{ env.MODULE_NAME }}:latest
-      #     docker push ${{ env.DOCKER_REPOSITORY }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}
-      #     docker push ${{ env.DOCKER_REPOSITORY }}/${{ env.MODULE_NAME }}:latest
 
       - name: Maven deploy Stage
         if: ${{ github.ref == 'refs/heads/master' || github.ref  == 'refs/heads/main' }}
