Update related sample files

--- a/ramls/examples/departmentCollection.sample
+++ b/ramls/examples/departmentCollection.sample
@@ -4,13 +4,15 @@
       "id": "b4b5e97a-0a99-4db9-97df-4fdf406ec74d",
       "name": "Accounting",
       "code": "ACC",
-      "usageNumber": 0
+      "usageNumber": 0,
+      "source": "System"
     },
     {
       "id": "4bb563d9-3f9d-4e1e-8d1d-04e75666d68f",
       "name": "History",
       "code": "HIS",
-      "usageNumber": 2
+      "usageNumber": 2,
+      "source": "System"
     }
   ],
   "totalRecords": 2
