--- a/ramls/examples/department.sample
+++ b/ramls/examples/department.sample
@@ -2,5 +2,6 @@
   "id": "b4b5e97a-0a99-4db9-97df-4fdf406ec74d",
   "name": "Accounting",
   "code": "ACC",
-  "usageNumber": 10
+  "usageNumber": 10,
+  "source": "System"
 }
