--- a/ramls/examples/groups.sample
+++ b/ramls/examples/groups.sample
@@ -4,12 +4,14 @@
       "group": "librarian",
       "desc": "basic lib group",
       "expirationOffsetInDays": 365,
-      "id": "b4b5e97a-0a99-4db9-97df-4fdf406ec74d"
+      "id": "b4b5e97a-0a99-4db9-97df-4fdf406ec74d",
+      "source": "System"
     },
     {
       "group": "on_campus_patrons",
       "desc": "On-campus patrons",
-      "id": "4bb563d9-3f9d-4e1e-8d1d-04e75666d68f"
+      "id": "4bb563d9-3f9d-4e1e-8d1d-04e75666d68f",
+      "source": "System"
     }
   ],
   "totalRecords": 2
