--- a/pom.xml
+++ b/pom.xml
@@ -529,7 +529,7 @@
     <vertx.version>4.3.8</vertx.version>
     <generate_routing_context>/users</generate_routing_context>
     <junit.version>5.8.1</junit.version>
-    <folio-service-tools.version>1.9.0</folio-service-tools.version>
+    <folio-service-tools.version>3.1.0-SNAPSHOT</folio-service-tools.version>
     <folio-custom-fields.version>1.8.0</folio-custom-fields.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
     <java.version>17</java.version>
