--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.folio</groupId>
   <artifactId>mod-users</artifactId>
-  <version>19.2.0-SNAPSHOT</version>
+  <version>19.2.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <licenses>
@@ -61,7 +61,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>folio-kafka-wrapper</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.kafka</groupId>
@@ -529,8 +529,8 @@
     <vertx.version>4.3.8</vertx.version>
     <generate_routing_context>/users</generate_routing_context>
     <junit.version>5.8.1</junit.version>
-    <folio-service-tools.version>3.1.0-SNAPSHOT</folio-service-tools.version>
-    <folio-custom-fields.version>1.10.0-SNAPSHOT</folio-custom-fields.version>
+    <folio-service-tools.version>3.1.0</folio-service-tools.version>
+    <folio-custom-fields.version>1.10.0</folio-custom-fields.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
     <java.version>17</java.version>
     <aspectj.version>1.9.19</aspectj.version>
