--- a/pom.xml
+++ b/pom.xml
@@ -530,7 +530,7 @@
     <generate_routing_context>/users</generate_routing_context>
     <junit.version>5.8.1</junit.version>
     <folio-service-tools.version>3.1.0</folio-service-tools.version>
-    <folio-custom-fields.version>1.10.0</folio-custom-fields.version>
+    <folio-custom-fields.version>2.0.0-SNAPSHOT</folio-custom-fields.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
     <java.version>17</java.version>
     <aspectj.version>1.9.19</aspectj.version>
