--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.folio</groupId>
   <artifactId>mod-users</artifactId>
-  <version>19.3.0-SNAPSHOT</version>
+  <version>19.3.0</version>
   <packaging>jar</packaging>
 
   <licenses>
@@ -63,7 +63,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>folio-s3-client</artifactId>
-      <version>${folio-s3-client.version}</version>
+      <version>2.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.folio</groupId>
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>folio-custom-fields</artifactId>
-      <version>${folio-custom-fields.version}</version>
+      <version>2.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.folio</groupId>
@@ -550,7 +550,7 @@
     <url>https://github.com/folio-org/mod-users</url>
     <connection>scm:git:git://github.com:folio-org/mod-users.git</connection>
     <developerConnection>scm:git:git@github.com:folio-org/mod-users.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v19.3.0</tag>
   </scm>
 
   <properties>
