--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>folio-s3-client</artifactId>
-      <version>2.1.0</version>
+      <version>${folio-s3-client.version}</version>
     </dependency>
     <dependency>
       <groupId>org.folio</groupId>
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>folio-custom-fields</artifactId>
-      <version>2.1.0</version>
+      <version>${folio-custom-fields.version}</version>
     </dependency>
     <dependency>
       <groupId>org.folio</groupId>
